--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .page {
@@ -59,10 +60,16 @@ body {
     width: 80%;
     height: 30px;
     border-radius: 20px;
-    background-color: #B09B71;
-    border: 1px solid #B09B71;
+    background-color: #EDDFB3;
+    border: 1px solid #EDDFB3;
+    padding-left: 10px;
 }
 
+#search-bar input:focus {
+    border: 1px solid  #94825f;
+    background-color:  rgb(204, 188, 134);
+    outline: none;
+}
 .div-1 {
     flex: 0 1 25%;
     box-sizing: border-box;
@@ -89,21 +96,23 @@ body {
 }
 
 #box-2-item-1 {
-    flex: 1 1 50%;
+    flex: 1 1 60%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr;
+    line-height: 7px;
 }
 
 #box-2-item-2 {
-    flex: 1 1 50%;
-    border: 1px solid red;
+    flex: 1 1 40%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 
 #profile {
     grid-area: 1 / 1 / 2 / 2;
-    border: 1px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -111,11 +120,25 @@ body {
 
 #title {
     grid-area: 1 / 2 / 2 / 6;
-    border: 1px solid red;
-
+    padding-left: 10px;
 }
 
 .main {
     grid-area: 2 / 3 / 3 / 11;
     background-color: #EDDFB3;
+    box-shadow: inset 0px 8px 6px -6px grey;
+}
+
+.btn-1 {
+    background-color: #B09B71;
+    font-size: 18px;
+    border: 1px solid #B09B71;
+    border-radius: 20px;
+    width: 120px;
+    height: 40px;
+    font-weight: bold;
+}
+
+.btn-1:hover { 
+    background-color: #94825f;
 }
