--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .page {
@@ -15,6 +16,39 @@ body {
 .sidebar {
     grid-area: 1 / 1 / 3 / 3;
     background-color: #B09B71;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.dashboard-title {
+    border: 1px solid blue;
+    flex: 0 1 100px;
+    display: flex;
+}
+
+.spacer {
+    border: 1px solid green;
+    flex: 0 1 60px;
+}
+
+.sub-title {
+    border: 1px solid red;
+    flex: 0 1 60px;
+    width: 100%;
+    display: flex;
+}
+
+.svg {
+    width: 20%;
+    border: 1px solid black;
+    height: 100%;
+}
+
+.title {
+    width: 80%;
+    height: 100%;
+    border: 1px solid white;
 }
 
 .header {
@@ -83,7 +117,6 @@ body {
     box-sizing: border-box;
     text-align: center;
     font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 #box-1-item-2 {
@@ -137,6 +170,7 @@ body {
     width: 120px;
     height: 40px;
     font-weight: bold;
+    color: white;
 }
 
 .btn-1:hover { 
