--- a/styles.css
+++ b/styles.css
@@ -19,36 +19,36 @@ body {
     display: flex;
     flex-direction: column;
     padding: 10px;
+    color: white;
 }
 
 .dashboard-title {
-    border: 1px solid blue;
     flex: 0 1 100px;
     display: flex;
 }
 
+
 .spacer {
-    border: 1px solid green;
     flex: 0 1 60px;
 }
 
 .sub-title {
-    border: 1px solid red;
     flex: 0 1 60px;
     width: 100%;
     display: flex;
 }
 
 .svg {
-    width: 20%;
-    border: 1px solid black;
+    width: 30%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .title {
-    width: 80%;
+    width: 70%;
     height: 100%;
-    border: 1px solid white;
 }
 
 .header {
@@ -157,9 +157,113 @@ body {
 }
 
 .main {
+    padding: 10px;
     grid-area: 2 / 3 / 3 / 11;
     background-color: #EDDFB3;
     box-shadow: inset 0px 8px 6px -6px grey;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 10% 90%;
+}
+
+.left-title {
+    grid-area: 1 / 1 / 2 / 4;
+    padding-left: 10px;
+}
+
+.left-main {
+    padding: 15px;
+    grid-area: 2 / 1 / 3 / 4;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 25px;
+}
+
+.box {
+    grid-area: span 1;
+    background-color: #D8CCA3;
+    border-radius: 10px;
+    box-shadow:  5px 6px 5px rgba(0,0,0,0.25);
+    display: grid;
+    grid-template-columns: 15px auto;
+    grid-template-rows: repeat(4, 1fr);
+    overflow: hidden;
+}
+
+.color {
+    background-color: #bdb28f;
+    grid-area: 1 / 1 / 5 / 2;
+}
+
+.box-main {
+    padding: 25px 10px;
+    grid-area: 1 / 2 / 4 / 5;
+    overflow: auto;    
+}
+
+p {
+    color: grey;
+    font-size: 1.2rem;
+}
+
+.box-icons {
+    grid-area: 5 / 2 / 4 / 5; 
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    padding-right: 20px;
+}
+
+.box svg:hover, .sub-title svg:hover {
+    transform: scale(1.5);
+}
+
+.box:hover, #announcements:hover, #trending-content:hover {
+    transform: scale(1.005);
+}
+
+.right-title {
+    grid-area: 1 / 4 / 2 / 5;
+    padding-left: 10px;
+}
+
+.right-main {
+    padding: 15px 20px;
+    grid-area: 2 / 4 / 3 / 5;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 2fr;
+    row-gap: 15px;
+}
+
+.right-main div {
+    grid-area: span 1;
+}
+
+#trending {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 4fr;
+}
+
+#trending-title {
+    grid-area: span 1;
+    display: inline;
+    line-height: 3px;
+}
+
+#announcements {
+    background-color: #D8CCA3;
+    border-radius: 10px;
+    box-shadow:  5px 6px 5px rgba(0,0,0,0.25);
+}
+
+#trending-content {
+    grid-area: auto;
+    background-color: #D8CCA3;
+    border-radius: 10px;
+    box-shadow:  5px 6px 5px rgba(0,0,0,0.25);
 }
 
 .btn-1 {
