--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ body {
 }
 
 p {
-    color: grey;
+    color: rgb(66, 66, 63);
     font-size: 1.2rem;
 }
 
@@ -215,12 +215,16 @@ p {
     padding-right: 20px;
 }
 
-.box svg:hover, .sub-title svg:hover {
+.box svg:hover {
     transform: scale(1.5);
 }
 
 .box:hover, #announcements:hover, #trending-content:hover {
     transform: scale(1.005);
+}
+
+.sub-title:hover {
+    transform: scale(1.1);
 }
 
 .right-title {
@@ -257,6 +261,25 @@ p {
     background-color: #D8CCA3;
     border-radius: 10px;
     box-shadow:  5px 6px 5px rgba(0,0,0,0.25);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.content-box {
+    flex: 0 1 30%;
+}
+
+.content-box p {
+    font-size: 1em;
+    display: inline;
+}
+
+.line {
+    height: 1px;
+    width: 100%;
+    background-color: grey;
 }
 
 #trending-content {
@@ -264,6 +287,38 @@ p {
     background-color: #D8CCA3;
     border-radius: 10px;
     box-shadow:  5px 6px 5px rgba(0,0,0,0.25);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+}
+
+.trend {
+    flex: 1;
+    display: flex;
+    gap: 10px;
+}
+
+.trend-profile {
+    flex: 0 1 20%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.name {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.username {
+    display: block;
+    color: rgb(66, 66, 63);
+    font-size: 18px;
+}
+
+.trend-text {
+    flex: 0 1 80%;
 }
 
 .btn-1 {
